[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/main/Game.gd" type="Script" id=1]
[ext_resource path="res://src/lobby/Lobby.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/avatar_rank_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/leaderboard/LeaderBoard.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/paused/Paused.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/stopped/Stopped.tscn" type="PackedScene" id=6]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="connection" type="Timer" parent="."]

[node name="Scenes" type="CenterContainer" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobby" type="ViewportContainer" parent="Scenes"]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Scenes/lobby"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Lobby" parent="Scenes/lobby/Viewport" instance=ExtResource( 2 )]

[node name="active" type="ViewportContainer" parent="Scenes"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Scenes/active"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
usage = 0
render_target_update_mode = 0

[node name="Leaderboard" parent="Scenes/active/Viewport" instance=ExtResource( 4 )]

[node name="paused" type="ViewportContainer" parent="Scenes"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Scenes/paused"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
usage = 0
render_target_update_mode = 0

[node name="Pause" parent="Scenes/paused/Viewport" instance=ExtResource( 5 )]

[node name="stopped" type="ViewportContainer" parent="Scenes"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Scenes/stopped"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
usage = 0
render_target_update_mode = 0

[node name="Pause" parent="Scenes/stopped/Viewport" instance=ExtResource( 6 )]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
margin_right = 598.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lobby" type="Button" parent="HBoxContainer"]
margin_right = 125.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = "Lobby"

[node name="Game" type="Button" parent="HBoxContainer"]
margin_left = 129.0
margin_right = 242.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = "Game"

[node name="Pause" type="Button" parent="HBoxContainer"]
margin_left = 246.0
margin_right = 377.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = "Pause"

[node name="Stop" type="Button" parent="HBoxContainer"]
margin_left = 381.0
margin_right = 598.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = "Game Over"
[connection signal="timeout" from="connection" to="." method="_on_connection_timeout"]
[connection signal="pressed" from="HBoxContainer/Lobby" to="." method="_on_Lobby_pressed"]
[connection signal="pressed" from="HBoxContainer/Game" to="." method="_on_Game_pressed"]
[connection signal="pressed" from="HBoxContainer/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="HBoxContainer/Stop" to="." method="_on_Stop_pressed"]
